fixed aboutme window alignment

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -246,6 +246,7 @@ a{
     padding: 0;
     display: flex;
     padding-right: 5px;
+    min-width: 0;
 }
 
 #taskbarItem img{
